[project]
name = "frameutilitys"
description = "Professional-grade frame manipulation tools for ComfyUI, providing advanced video editing capabilities with native IMAGE tensor support."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# ComfyUI Frame Utility Requirements", "#", "# This package leverages ComfyUI's existing dependencies and requires no additional packages.", "# All functionality is built using PyTorch and standard Python libraries already included with ComfyUI.", "#", "# Core dependencies (provided by ComfyUI):", "# - torch>=1.13.0", "# - torchvision>=0.14.0", "# - numpy>=1.20.0", "# - PIL (Pillow)>=8.0.0", "#", "# No additional dependencies required!"]

[project.urls]
Repository = "https://github.com/lum3on/ComfyUI-FrameUtilitys"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/lum3on/ComfyUI-FrameUtilitys/wiki"
"Bug Tracker" = "https://github.com/lum3on/ComfyUI-FrameUtilitys/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-FrameUtilitys"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

